--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta http-equiv="Content-Language" content="vi-VN" />
-	<meta name="google-site-verification" content="">
-	<meta name="msvalidate.01" content="">
-	<meta name="yandex-verification" content="">
+	<meta name="google-site-verification" content="SoUC1Ecwq2Mz8D9AoXuCXbVzrPb6g8fmg10jUXUS-VA">
+	<meta name="msvalidate.01" content="080A9672F801279C0E50510383971A10">
+	<meta name="yandex-verification" content="0b018d04005c9a54">
 	<meta name="p:domain_verify" content="">
 	<meta property="fb:app_id" content="">
 	<meta property="fb:admins" content="">
@@ -31,7 +31,15 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" rel="preload" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" rel="preload" href="assets/css/main.css">
-	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138502789-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-138502789-1');
+	</script>
 </head>
 
 <body>
