--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 	<meta property="fb:admins" content="">
 	<meta name="robots" content="follow, all">
 	<meta name="author" content="Khanh, Lai Van">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="description" content="LUÔN MANG NHỮNG TUYỆT PHẨM PHIM ẢNH ĐẾN VỚI BẠN SỚM NHẤT – CHẤT LƯỢNG NHẤT.">
+	<meta name="keywords" content="phim moi, phim, phim chieu rap, phim hot, mọt phim, phim hay, phim hanh dong, phim bom tấn">
 
+	<link rel="dns-prefetch" href="//www.google-analytics.com">
 	<link rel="dns-prefetch" href="//www.google-analytics.com">
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
