--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta name="keywords" content="phim moi, phim, phim chieu rap, phim hot, mọt phim, phim hay, phim hanh dong, phim bom tấn">
 
 	<link rel="dns-prefetch" href="//www.google-analytics.com">
-	<link rel="dns-prefetch" href="//www.google-analytics.com">
+	<link rel="dns-prefetch" href="//zalo-article-photo-td.zadn.vn">
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
