--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="vi">
 <head>
-	<title>Phim chiếu rạp</title>
+	<title>Phim chiếu rạp | Phim Mới | Phim hay | Xem phim nhanh | Xem phim online | Phim HD Vietsub | PhimNetClub</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -48,7 +48,7 @@
 
 		<section class="jumbotron text-center">
 			<div class="container">
-				<h1 class="jumbotron-heading">Phim chiếu rạp</h1>
+				<h1 class="jumbotron-heading">PhimNetClub</h1>
 				<p class="lead text-muted">LUÔN MANG NHỮNG TUYỆT PHẨM PHIM ẢNH ĐẾN VỚI BẠN SỚM NHẤT – CHẤT LƯỢNG NHẤT.</p>
 			</div>
 		</section>
