--- a/index.html
+++ b/index.html
@@ -96,13 +96,9 @@
 
 	<footer class="text-muted">
 		<div class="container">
-			<p class="float-right">
-				<a href="#">Lên đầu trang</a>
-			</p>
-			<p>&copy; PhimNet 2019, Cảm ơn bạn đã đồng hành. Chúc bạn luôn vui vẻ trong cuộc sống và nhiều giây phút thư giãn!
-			</p>
-			<p>Liên hệ: <a href="mailto:phimnet.club@gmail.com">phimnet.club@gmail.com</a> | <a href="complaints.html">Khiếu nại bản quyền</a> | <a
-					href="donate.html">Quyền góp (Donate)</a>.</p>
+			<p class="float-right"><a href="#">Lên đầu trang</a></p>
+			<p>&copy;PhimNetClub 2019, Cảm ơn bạn đã đồng hành. Chúc bạn luôn vui vẻ trong cuộc sống và nhiều giây phút thư giãn!</p>
+			<p>Liên hệ: <a href="mailto:phimnet.club@gmail.com">phimnet.club@gmail.com</a> | <a target="_bank" href="complaints.html">Khiếu nại bản quyền</a> | <a target="_bank" href="donate.html">Quyền góp (Donate)</a>.</p>
 		</div>
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
