--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
 	<link rel="manifest" href="assets/img/manifest.json">
 	<link rel="mask-icon" href="assets/img/safari-pinned-tab.svg" color="#5bbad5">
-	<link rel="canonical" href=""/>
-	<link href="/index.xml" rel="alternate" type="application/rss+xml" title="">
-	<link href="/index.xml" rel="feed" type="application/rss+xml" title="">
+	<link rel="canonical" href="//phimnet.club"/>
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" rel="preload" href="assets/css/bootstrap.min.css">
