--- a/detail.html
+++ b/detail.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="vi">
 <head>
 	<title>Phim chiếu rạp | Phim Mới | Phim hay | Xem phim nhanh | Xem phim online | Phim HD Vietsub | PhimNetClub</title>
 	<meta charset="utf-8">
