--- a/detail.html
+++ b/detail.html
@@ -14,6 +14,7 @@
 
 	<link rel="dns-prefetch" href="//www.google-analytics.com">
 	<link rel="dns-prefetch" href="//zalo-article-photo-td.zadn.vn">
+	<link rel="dns-prefetch" href="//spreadsheets.google.com">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
