--- a/detail.html
+++ b/detail.html
@@ -14,6 +14,8 @@
 
 	<link rel="dns-prefetch" href="//www.google-analytics.com">
 	<link rel="dns-prefetch" href="//zalo-article-photo-td.zadn.vn">
+	<link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+	<link rel="dns-prefetch" href="//spreadsheets.google.com">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
@@ -23,7 +25,7 @@
 	<link rel="canonical" href="https://phimnet.club"/>
 
 	<!-- Bootstrap CSS -->
-	<link rel="stylesheet" rel="preload" href="assets/css/main.css?v=1.0.7">
+	<link rel="stylesheet" rel="preload" href="assets/css/main.css?v=1.0.8">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138502789-1"></script>
@@ -34,8 +36,7 @@
 
 		gtag('config', 'UA-138502789-1');
 	</script>
-	<script defer async src="assets/js/main.js?v=1.0.7"></script>
-	<script defer async src="assets/js/webcomponent.js?v=1.0.7"></script>
+	<script src="assets/js/googleCallback.js?v=1.0.8"></script>
 </head>
 
 <body>
