--- a/complaints.html
+++ b/complaints.html
@@ -21,9 +21,7 @@
 		<link rel="manifest" href="assets/img/manifest.json">
 		<link rel="mask-icon" href="assets/img/safari-pinned-tab.svg" color="#5bbad5">
 		<link rel="canonical" href="https://phimnet.club/complaints.html"/>
-	
-		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" rel="preload" href="assets/css/main.css?v=1.0.7">
+		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138502789-1"></script>
@@ -34,7 +32,7 @@
 	
 			gtag('config', 'UA-138502789-1');
 		</script>
-		<script src="assets/js/googleCallback.js?v=1.0.7"></script>
+		<script async src="assets/js/googleCallback.js?v=1.0.10"></script>
 </head>
 
 <body>
