--- a/detail.html
+++ b/detail.html
@@ -23,7 +23,9 @@
 	<link rel="manifest" href="assets/img/manifest.json">
 	<link rel="mask-icon" href="assets/img/safari-pinned-tab.svg" color="#5bbad5">
 	<link rel="canonical" href="https://phimnet.club"/>
-	
+
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" rel="preload" href="assets/css/main.css?v=1.0.11">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138502789-1"></script>
