--- a/donate.html
+++ b/donate.html
@@ -23,7 +23,7 @@
 		<link rel="canonical" href="https://phimnet.club/donate.html"/>
 		
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" rel="preload" href="assets/css/main.css?v=1.0.11">
+		<link rel="stylesheet" rel="preload" href="assets/css/main.css?v=1.0.11" as="style">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138502789-1"></script>
