--- a/demo.html
+++ b/demo.html
@@ -1,311 +1,11 @@
 <html>
 <head>
 	<title>Demo</title>
-	 <meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.4/sockjs.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
-	<style>
-		.nav-tabs-custom {
-			width: 400px;
-		}
-		.header-title-box {
-			background-color: fuchsia;
-			padding-top: 5px;
-			margin-top: 0px;
-			margin-bottom: 2px;
-			text-align: center;
-			border: black solid 1px;
-		}
-
-		.border-block {
-			border: #ddd solid 1px;
-		}
-
-		.border-block-2x {
-			border: #ddd solid 2px;
-		}
-
-		.underline-cell {
-			border-bottom: turquoise solid 1px;
-		}
-
-		.message-box-scroll {
-			height: 350px;
-			overflow-x: hidden;
-			overflow-y: scroll;
-		}
-		.direct-chat-timestamp {
-			font-size: 9px;
-		}
-			
-		.direct-chat .box-body {
-			border-bottom-right-radius: 0;
-			border-bottom-left-radius: 0;
-			position: relative;
-			overflow-x: hidden;
-			padding: 0
-		}
-
-		.direct-chat.chat-pane-open .direct-chat-contacts {
-			-webkit-transform: translate(0, 0);
-			-ms-transform: translate(0, 0);
-			-o-transform: translate(0, 0);
-			transform: translate(0, 0)
-		}
-
-		.direct-chat-messages {
-			-webkit-transform: translate(0, 0);
-			-ms-transform: translate(0, 0);
-			-o-transform: translate(0, 0);
-			transform: translate(0, 0);
-			padding: 10px;
-			height: 250px;
-			overflow: auto
-		}
-
-		.direct-chat-msg,.direct-chat-text {
-			display: block
-		}
-
-		.direct-chat-msg {
-			margin-bottom: 10px
-		}
-
-		.direct-chat-msg:before,.direct-chat-msg:after {
-			content: " ";
-			display: table
-		}
-
-		.direct-chat-msg:after {
-			clear: both
-		}
-
-		.direct-chat-messages,.direct-chat-contacts {
-			-webkit-transition: -webkit-transform .5s ease-in-out;
-			-moz-transition: -moz-transform .5s ease-in-out;
-			-o-transition: -o-transform .5s ease-in-out;
-			transition: transform .5s ease-in-out
-		}
-
-		.direct-chat-text {
-			border-radius: 5px;
-			position: relative;
-			padding: 5px 10px;
-			background: #d2d6de;
-			border: 1px solid #d2d6de;
-			margin: 5px 0 0 50px;
-			color: #444
-		}
-
-		.direct-chat-text:after,.direct-chat-text:before {
-			position: absolute;
-			right: 100%;
-			top: 15px;
-			border: solid transparent;
-			border-right-color: #d2d6de;
-			content: ' ';
-			height: 0;
-			width: 0;
-			pointer-events: none
-		}
-
-		.direct-chat-text:after {
-			border-width: 5px;
-			margin-top: -5px
-		}
-
-		.direct-chat-text:before {
-			border-width: 6px;
-			margin-top: -6px
-		}
-
-		.right .direct-chat-text {
-			margin-right: 50px;
-			margin-left: 0
-		}
-
-		.right .direct-chat-text:after,.right .direct-chat-text:before {
-			right: auto;
-			left: 100%;
-			border-right-color: transparent;
-			border-left-color: #d2d6de
-		}
-
-		.direct-chat-img {
-			border-radius: 50%;
-			float: left;
-			width: 40px;
-			height: 40px
-		}
-
-		.right .direct-chat-img {
-			float: right
-		}
-
-		.direct-chat-info {
-			display: block;
-			margin-bottom: 2px;
-			font-size: 12px
-		}
-
-		.direct-chat-name {
-			font-weight: 600
-		}
-
-		.direct-chat-timestamp {
-			color: #999
-		}
-
-		.direct-chat-contacts-open .direct-chat-contacts {
-			-webkit-transform: translate(0, 0);
-			-ms-transform: translate(0, 0);
-			-o-transform: translate(0, 0);
-			transform: translate(0, 0)
-		}
-
-		.direct-chat-contacts {
-			-webkit-transform: translate(101%, 0);
-			-ms-transform: translate(101%, 0);
-			-o-transform: translate(101%, 0);
-			transform: translate(101%, 0);
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			height: 250px;
-			width: 100%;
-			background: #222d32;
-			color: #fff;
-			overflow: auto
-		}
-	</style>
+	<meta charset="utf-8"> <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	 
 </head>
 <body>
-	<input type="text" class="form-control" autocomplete="off" name="fullname"
-                                   placeholder="Tên"/>
-	<input type="text" class="form-control" autocomplete="off" name="uuid"
-                                   placeholder="uuid"/>
-	<button class="btn btn-primary btn-flat btn-add-chat">Tạo cửa sổ CHAT</button>
-	<div class="nav-tabs-custom border-block">
-		<div class="box-body" style="padding: 0px;">
-			<!-- Conversations are loaded here -->
-			<div class="data-live-chat direct-chat-messages message-box-scroll">
-
-			</div>
-		</div>
-		<div>
-			<div class="input-group">
-				<input type="text" name="txtMessage" placeholder="Nhập tin nhắn ..." class="form-control">
-				<span class="input-group-btn">
-					<button type="submit" class="btn btn-primary btn-flat btnSend">Gửi</button>
-				</span>
-			</div>
-		</div>
-	</div>
-	<script>
-		var contextPath = '/agentcysys';
-		var stompClient = null;
-		var uuid,fullName;
-		var dataLiveChat = $('.data-live-chat');
-		var inputMessage = $('input[name=txtMessage]');
-		var buttonSend = $('.btnSend');
-		var buttonAdd =  $('.btn-add-chat');
-
-		function messageLeft(data) {
-			return '<div class="direct-chat-msg">' +
-				'    <div class="direct-chat-info clearfix">' +
-				'        <span class="direct-chat-name pull-left">KH-' + data.name +'</span>' +
-				'    </div>' +
-				'    <img class="direct-chat-img" src="'+ contextPath +'/resources/dist/img/user3-128x128.jpg" alt="">' +
-				'    <div class="direct-chat-text">'+  data.content +'</div>' +
-				'    <span class="direct-chat-timestamp pull-right">'+ moment(data.time).format('DD/MM/YYYY HH:mm') +'</span>' +
-				'  </div>';
-		}
-
-		function messageRight(data) {
-			return '<div class="direct-chat-msg right">' +
-				'    <div class="direct-chat-info clearfix">' +
-				'        <span class="direct-chat-name pull-right">CSKH-' + data.name +'</span>' +
-				'    </div>' +
-				'    <img class="direct-chat-img" src="'+ contextPath +'/resources/dist/img/user3-128x128.jpg" alt="">' +
-				'    <div class="direct-chat-text">'+  data.content +'</div>' +
-				'    <span class="direct-chat-timestamp pull-left">'+ moment(data.time).format('DD/MM/YYYY HH:mm') +'</span>' +
-				' </div>';
-		}
-
-		function message(data) {
-			if (data.messageType == 'NHAN_VIEN') {
-				dataLiveChat.append(messageRight(data));
-			}
-			if (data.messageType == 'KHACH_HANG') {
-				dataLiveChat.append(messageLeft(data));
-			}
-		}
-
-		function loadDataChat() {
-			$.ajax({
-				url: 'http://192.168.28.205:8080' + contextPath + '/chatAjax/listMessageByUUID?uuid='+ uuid,
-				method: 'GET',
-				dataType: 'json',
-				success: function(rep) {
-					rep.forEach(function(d) {
-						message(d);
-					});
-					dataLiveChat.scrollTop(99999);
-				}
-			});
-		}
-
-		function init() {
-			uuid = $('input[name=uuid]').val();
-			fullName = $('input[name=fullname]').val();
-			loadDataChat();
-
-			var socket = new SockJS('http://192.168.28.205:8080/agentcysys/ws-support');
-			stompClient = Stomp.over(socket);
-			stompClient.debug = function(str) {};
-			stompClient.connect({}, function() {
-				stompClient.subscribe('/topic/' + uuid, function (messageOutput) {
-					message(JSON.parse(messageOutput.body));
-					dataLiveChat.scrollTop(99999);
-				});
-			}, function(error) {
-				console.log(error);
-			});
-
-			inputMessage.off('keypress').on('keypress', function(e) {
-				if(e.keyCode == 13)
-				{
-					sendMessage();
-				}
-			});
-
-			buttonSend.off('click').on('click', function() {
-				sendMessage();
-			});
-		};
-
-		function sendMessage() {
-			if (stompClient) {
-				var chatMessage = {
-					name: fullName,
-					content: inputMessage.val(),
-					id: uuid,
-					messageType: 'KHACH_HANG'
-				};
-				stompClient.send("/app/chat", {}, JSON.stringify(chatMessage));
-
-				inputMessage.val('');
-
-				dataLiveChat.scrollTop(99999);
-			}
-		}
-
-		buttonAdd.on('click', function() {
-			init();
-		});
-	</script>
-	
+	<div class="chat-support" uuid="order.1994" name="khanh" height="300"></div>
+	<script async src="http://localhost:8080/agentcysys/resources/js/chat/js_chat.js"></script>
 </body>
 </html>
