update demo chat 2

--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
 	 
 </head>
 <body>
-	<div class="chat-support" uuid="order.1994" name="khanh" height="300"></div>
-	<script async src="http://localhost:8080/agentcysys/resources/js/chat/js_chat.js"></script>
+	<div class="chat-support" uuid="order.1994" user-id="12" name="khanh" height="300"></div>
+	<script async src="http://localhost:8080/agentcysys/chat/js"></script>
 </body>
 </html>
